fix java.lang.reflect.InaccessibleObjectException